Auto rewrite (#2477)
* Format code

* Add rewrite profile

* Rewrite improvements

* Automatically review PRs with OpenRewrite recipe runs