@@ -24,13 +24,7 @@ import feign.Feign.Builder;
 import feign.RetryableException;
 import feign.assertj.MockWebServerAssertions;
 import java.io.IOException;
-import java.net.HttpURLConnection;
-import java.net.InetSocketAddress;
-import java.net.ProtocolException;
-import java.net.Proxy;
-import java.net.Proxy.Type;
-import java.net.SocketAddress;
-import java.net.URL;
+import java.net.*;
 import java.util.Collections;
 import okhttp3.mockwebserver.MockResponse;
 import okhttp3.mockwebserver.SocketPolicy;
@@ -131,12 +125,13 @@ public class DefaultClientTest extends AbstractClientTest {
   @Test
   void canCreateWithImplicitOrNoCredentials() throws Exception {
     Proxied proxied =
-        new Proxied(TrustingSSLSocketFactory.get(), null, new Proxy(Type.HTTP, proxyAddress));
+        new Proxied(TrustingSSLSocketFactory.get(), null, new Proxy(Proxy.Type.HTTP, proxyAddress));
     assertThat(proxied).isNotNull();
     assertThat(proxied.getCredentials()).isNullOrEmpty();
 
     /* verify that the proxy */
-    HttpURLConnection connection = proxied.getConnection(new URL("http://www.example.com"));
+    HttpURLConnection connection =
+        proxied.getConnection(URI.create("http://www.example.com").toURL());
     assertThat(connection).isNotNull().isInstanceOf(HttpURLConnection.class);
   }
 
@@ -146,13 +141,14 @@ public class DefaultClientTest extends AbstractClientTest {
         new Proxied(
             TrustingSSLSocketFactory.get(),
             null,
-            new Proxy(Type.HTTP, proxyAddress),
+            new Proxy(Proxy.Type.HTTP, proxyAddress),
             "user",
             "password");
     assertThat(proxied).isNotNull();
     assertThat(proxied.getCredentials()).isNotBlank();
 
-    HttpURLConnection connection = proxied.getConnection(new URL("http://www.example.com"));
+    HttpURLConnection connection =
+        proxied.getConnection(URI.create("http://www.example.com").toURL());
     assertThat(connection).isNotNull().isInstanceOf(HttpURLConnection.class);
   }
 }
